<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<EditText
		android:id="@+id/text_input"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/large_spacing"
		android:layout_marginRight="@dimen/large_spacing"
		android:layout_marginLeft="@dimen/large_spacing"
		android:hint="@string/input_hint"
		android:inputType="textAutoCorrect"
		app:layout_constraintEnd_toStartOf="@+id/or"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="@+id/device_input"/>

	<TextView
		android:id="@+id/or"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="12dp"
		android:layout_marginRight="12dp"
		android:layout_marginTop="30dp"
		android:text="@string/or"
		app:layout_constraintEnd_toStartOf="@+id/device_input"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/device_input"
		android:layout_width="@dimen/upload_button"
		android:layout_height="@dimen/upload_button"
		android:layout_marginEnd="@dimen/large_spacing"
		android:layout_marginRight="@dimen/large_spacing"
		android:layout_marginTop="@dimen/large_spacing"
		android:padding="@dimen/medium_spacing"
		android:clickable="true"
		android:focusable="true"
		app:srcCompat="@drawable/upload"
		android:tint="@color/gray"
		android:background="?attr/selectableItemBackgroundBorderless"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/linebreak"
		android:background="@color/gray"
		android:layout_width="match_parent"
		app:layout_constraintTop_toBottomOf="@+id/device_input"
		android:layout_marginTop="@dimen/medium_spacing"
		android:layout_height="1px"/>

	<RelativeLayout
		android:id="@+id/repost_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		tools:visibility="visible"
		android:orientation="vertical"
		app:layout_constraintTop_toBottomOf="@+id/linebreak">

		<TextView
			android:id="@+id/image_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/small_spacing"
			android:layout_marginTop="@dimen/medium_spacing"
			android:layout_marginLeft="@dimen/medium_spacing"
			android:layout_marginStart="@dimen/medium_spacing"
			android:textStyle="bold"
			android:text="@string/yours"/>

		<ImageView
			android:id="@+id/image_container"
			android:layout_width="@dimen/image_size"
			android:layout_height="@dimen/image_size"
			android:layout_marginStart="@dimen/medium_spacing"
			android:layout_marginLeft="@dimen/medium_spacing"
			android:layout_below="@+id/image_text"
			android:adjustViewBounds="true"/>

		<TextView
			android:id="@+id/similar_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/large_spacing"
			android:layout_marginBottom="@dimen/small_spacing"
			android:layout_marginLeft="@dimen/medium_spacing"
			android:layout_marginStart="@dimen/medium_spacing"
			android:layout_below="@+id/image_container"
			android:textStyle="bold"
			android:text="@string/similar"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/reposts"
			android:layout_width="match_parent"
			android:layout_height="@dimen/image_size"
			android:layout_below="@+id/similar_text"/>

		<TextView
			android:id="@+id/is_repost"
			tools:text="It looks like this image may already have been posted to awwnime"
			android:visibility="gone"
			tools:visibility="visible"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/medium_spacing"
			android:layout_marginLeft="@dimen/large_spacing"
			android:layout_marginStart="@dimen/large_spacing"
			android:layout_marginRight="@dimen/medium_spacing"
			android:layout_marginEnd="@dimen/medium_spacing"
			android:layout_toEndOf="@+id/image_container"
			android:layout_toRightOf="@+id/image_container"
			android:layout_alignTop="@+id/image_container"
			android:background="@drawable/repost_warning"
			/>
	</RelativeLayout>

	<ProgressBar
		android:id="@+id/progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:visibility="gone"
		tools:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/main_action"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/device_input" />

	<Button
		android:id="@+id/main_action"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/search"
		android:layout_marginBottom="@dimen/large_spacing"
		android:layout_marginTop="@dimen/large_spacing"
		android:layout_marginLeft="@dimen/large_spacing"
		android:layout_marginRight="@dimen/large_spacing"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/repost_container"
		app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>